--- a/package.json
+++ b/package.json
@@ -9,19 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.33.0",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "clsx": "^2.1.1",
-    "motion": "^12.15.0",
     "next": "15.3.3",
-    "postcss": "^8.5.4",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "sass": "^1.89.1",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8"
+    "sass": "^1.89.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
